--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 開発メモ.md
+remics-test1/.vscode/extensions.json
+remics-test1/.vscode/launch.json
+remics-test1/.vscode/settings.json
+remics-prod/.vscode/extensions.json
+remics-prod/.vscode/launch.json
+remics-prod/.vscode/settings.json
